# sorenon_openxr_layer

./: Cargo.toml  LICENSE  README.md  manifest.json
graphics_interop/: Cargo.toml  build.rs
graphics_interop/src/: lib.rs
graphics_interop/src/apis/: mod.rs  opengl.rs  vulkan.rs
installer/: Cargo.toml
installer/src/: main.rs
layer_core/: Cargo.toml
layer_core/src/: entry.rs  lib.rs  loader_interfaces.rs
layer_core/src/graphics/: mod.rs  vulkan.rs  vulkan_backend.rs
layer_core/src/graphics/opengl/: frontend.rs  mod.rs
layer_core/src/graphics/opengl/platform/: linux.rs  mod.rs  windows.rs
layer_core/src/interceptors/: instance.rs  mod.rs  session.rs  swapchain.rs
layer_core/src/wrappers/: instance.rs  mod.rs  session.rs  swapchain.rs
layer_entry/: Cargo.toml
layer_entry/src/: lib.rs
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
