[package]
name = "layer_core"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.35"
bitflags = "1.3"
dashmap = "5.0"
glutin_glx_sys = "0.1"
log = "0.4"
openxr = { git = "https://github.com/Sorenon/openxrs", default-features = false, features = ["from_proc_addr"] }
simplelog = "0.11"
graphics_interop = { path = "../graphics_interop" }
lazy_static = "1.4"

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.7"
glutin_wgl_sys = "0.1"
glutin_egl_sys = "0.1"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = [
    "std",
    "winnt",
    "winuser",
    "wingdi",
    "libloaderapi",
]

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
glutin_glx_sys = "0.1"
libloading = "0.7"