[package]
name = "layer_core"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.37"
bitflags = "1.3"
dashmap = "5.3"
glutin_glx_sys = "0.1"
log = "0.4"
openxr = { git = "https://github.com/Sorenon/openxrs", default-features = false, branch = "layer" }
simplelog = "0.12"
graphics_interop = { path = "../graphics_interop" }
lazy_static = "1.4"
libloading = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
glutin_wgl_sys = "0.1"
glutin_egl_sys = "0.1"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = [
    "std",
    "winnt",
    "winuser",
    "wingdi",
    "libloaderapi",
    "handleapi",
]

[target.'cfg(any(target_os = "linux"))'.dependencies]
glutin_glx_sys = "0.1"
libc = "0.2"