[package]
name = "layer_entry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
openxr = { git = "https://github.com/Sorenon/openxrs", default-features = false, features = ["from_proc_addr"] }
log = "0.4"
simplelog = "0.11"
layer_core = { path = "../layer_core" }